Prettier.log
["INFO" - 3:31:19 PM] Extension Name: esbenp.prettier-vscode.
["INFO" - 3:31:19 PM] Extension Version: 12.4.0.
["INFO" - 3:31:37 PM] EditorConfig support is enabled, checking for .editorconfig files
["INFO" - 3:31:37 PM] No local configuration (i.e. .prettierrc or .editorconfig) detected, will fall back to VS Code configuration
["INFO" - 3:31:47 PM] EditorConfig support is enabled, checking for .editorconfig files
["INFO" - 3:31:47 PM] No local configuration (i.e. .prettierrc or .editorconfig) detected, will fall back to VS Code configuration
["INFO" - 3:31:52 PM] EditorConfig support is enabled, checking for .editorconfig files
["INFO" - 3:31:52 PM] No local configuration (i.e. .prettierrc or .editorconfig) detected, will fall back to VS Code configuration
["INFO" - 3:31:53 PM] Formatting file:///c%3A/Users/zolen/Documents/2.Informatique_Etude/Web/Projects/En_cours/Portofolio/index.html
["INFO" - 3:31:53 PM] EditorConfig support is enabled, checking for .editorconfig files
["INFO" - 3:31:53 PM] No local configuration (i.e. .prettierrc or .editorconfig) detected, will fall back to VS Code configuration
["INFO" - 3:31:53 PM] PrettierInstance:
{
  "__debug": {
    "mockable": {
      "mocked": {},
      "implementations": {}
    }
  },
  "__internal": {
    "errors": {},
    "optionCategories": {
      "CATEGORY_CONFIG": "Config",
      "CATEGORY_EDITOR": "Editor",
      "CATEGORY_FORMAT": "Format",
      "CATEGORY_GLOBAL": "Global",
      "CATEGORY_OTHER": "Other",
      "CATEGORY_OUTPUT": "Output",
      "CATEGORY_SPECIAL": "Special"
    },
    "formatOptionsHiddenDefaults": {
      "astFormat": "estree",
      "printer": {},
      "locStart": null,
      "locEnd": null,
      "getVisitorKeys": null
    },
    "vnopts": {
      "apiDescriptor": {}
    },
    "picocolors": {
      "isColorSupported": true
    },
    "utilities": {}
  },
  "doc": {
    "builders": {
      "line": {
        "type": "line"
      },
      "softline": {
        "type": "line",
        "soft": true
      },
      "hardline": [
        {
          "type": "line",
          "hard": true
        },
        {
          "type": "break-parent"
        }
      ],
      "literalline": [
        {
          "type": "line",
          "hard": true,
          "literal": true
        },
        {
          "type": "break-parent"
        }
      ],
      "lineSuffixBoundary": {
        "type": "line-suffix-boundary"
      },
      "cursor": {
        "type": "cursor"
      },
      "breakParent": {
        "type": "break-parent"
      },
      "trim": {
        "type": "trim"
      },
      "hardlineWithoutBreakParent": {
        "type": "line",
        "hard": true
      },
      "literallineWithoutBreakParent": {
        "type": "line",
        "hard": true,
        "literal": true
      }
    },
    "default": {
      "builders": {
        "line": {
          "type": "line"
        },
        "softline": {
          "type": "line",
          "soft": true
        },
        "hardline": [
          {
            "type": "line",
            "hard": true
          },
          {
            "type": "break-parent"
          }
        ],
        "literalline": [
          {
            "type": "line",
            "hard": true,
            "literal": true
          },
          {
            "type": "break-parent"
          }
        ],
        "lineSuffixBoundary": {
          "type": "line-suffix-boundary"
        },
        "cursor": {
          "type": "cursor"
        },
        "breakParent": {
          "type": "break-parent"
        },
        "trim": {
          "type": "trim"
        },
        "hardlineWithoutBreakParent": {
          "type": "line",
          "hard": true
        },
        "literallineWithoutBreakParent": {
          "type": "line",
          "hard": true,
          "literal": true
        }
      },
      "printer": {},
      "utils": {}
    },
    "printer": {},
    "utils": {}
  },
  "util": {},
  "version": "3.7.4"
}
["WARN" - 3:31:53 PM] Unable to resolve ignore path: .prettierignore for c:\Users\zolen\Documents\2.Informatique_Etude\Web\Projects\En_cours\Portofolio\index.html
["INFO" - 3:31:53 PM] Resolved plugins:
[]
["INFO" - 3:31:53 PM] File Info:
{
  "ignored": false,
  "inferredParser": "html"
}
["INFO" - 3:31:53 PM] Using VS Code configuration
["INFO" - 3:31:53 PM] Prettier Options:
{
  "arrowParens": "always",
  "bracketSpacing": true,
  "endOfLine": "lf",
  "htmlWhitespaceSensitivity": "css",
  "insertPragma": false,
  "singleAttributePerLine": false,
  "bracketSameLine": false,
  "jsxBracketSameLine": false,
  "jsxSingleQuote": false,
  "printWidth": 80,
  "proseWrap": "preserve",
  "quoteProps": "as-needed",
  "requirePragma": false,
  "semi": true,
  "singleQuote": false,
  "tabWidth": 2,
  "trailingComma": "all",
  "useTabs": false,
  "embeddedLanguageFormatting": "auto",
  "vueIndentScriptAndStyle": false,
  "experimentalTernaries": false,
  "objectWrap": "preserve",
  "experimentalOperatorPosition": "end",
  "filepath": "c:\\Users\\zolen\\Documents\\2.Informatique_Etude\\Web\\Projects\\En_cours\\Portofolio\\index.html",
  "parser": "html"
}
["ERROR" - 3:31:54 PM] Error formatting document.
["ERROR" - 3:31:54 PM] Unexpected closing tag "html". It may happen when the tag has already been closed by another tag. For more info see https://www.w3.org/TR/html5/syntax.html#closing-elements-that-have-implied-end-tags (987:1)
[0m [90m 985 |[39m     [33m<[39m[33mscript[39m [33msrc[39m[33m=[39m[32m"script.js"[39m[33m>[39m[33m<[39m[33m/[39m[33mscript[39m[33m>[39m
 [90m 986 |[39m   [33m<[39m[33m/[39m[33mbody[39m[33m>[39m
[31m[1m>[22m[39m[90m 987 |[39m [33m<[39m[33m/[39m[33mhtml[39m[33m>[39m
 [90m     |[39m [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m
 [90m 988 |[39m[0m
SyntaxError: Unexpected closing tag "html". It may happen when the tag has already been closed by another tag. For more info see https://www.w3.org/TR/html5/syntax.html#closing-elements-that-have-implied-end-tags (987:1)
[0m [90m 985 |[39m     [33m<[39m[33mscript[39m [33msrc[39m[33m=[39m[32m"script.js"[39m[33m>[39m[33m<[39m[33m/[39m[33mscript[39m[33m>[39m
 [90m 986 |[39m   [33m<[39m[33m/[39m[33mbody[39m[33m>[39m
[31m[1m>[22m[39m[90m 987 |[39m [33m<[39m[33m/[39m[33mhtml[39m[33m>[39m
 [90m     |[39m [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m
 [90m 988 |[39m[0m
	at al (file:///c:/Users/zolen/.vscode/extensions/esbenp.prettier-vscode-12.4.0/node_modules/prettier/plugins/html.mjs:24:8634)
	at jr (file:///c:/Users/zolen/.vscode/extensions/esbenp.prettier-vscode-12.4.0/node_modules/prettier/plugins/html.mjs:24:22609)
	at Xr (file:///c:/Users/zolen/.vscode/extensions/esbenp.prettier-vscode-12.4.0/node_modules/prettier/plugins/html.mjs:24:21705)
	at Kr (file:///c:/Users/zolen/.vscode/extensions/esbenp.prettier-vscode-12.4.0/node_modules/prettier/plugins/html.mjs:24:23222)
	at Object.parse (file:///c:/Users/zolen/.vscode/extensions/esbenp.prettier-vscode-12.4.0/node_modules/prettier/plugins/html.mjs:24:23618)
	at parse5 (file:///c:/Users/zolen/.vscode/extensions/esbenp.prettier-vscode-12.4.0/node_modules/prettier/index.mjs:16420:24)
	at async coreFormat (file:///c:/Users/zolen/.vscode/extensions/esbenp.prettier-vscode-12.4.0/node_modules/prettier/index.mjs:16952:7)
	at async formatWithCursor (file:///c:/Users/zolen/.vscode/extensions/esbenp.prettier-vscode-12.4.0/node_modules/prettier/index.mjs:17172:14)
	at async Object.format2 (file:///c:/Users/zolen/.vscode/extensions/esbenp.prettier-vscode-12.4.0/node_modules/prettier/index.mjs:18730:25)
	at async PrettierEditService.format (file:///c:/Users/zolen/.vscode/extensions/esbenp.prettier-vscode-12.4.0/dist/extension.js:3296:29)
	at async PrettierEditProvider.provideEdits (file:///c:/Users/zolen/.vscode/extensions/esbenp.prettier-vscode-12.4.0/dist/extension.js:3167:20)
	at async Fw.provideDocumentFormattingEdits (file:///c:/Users/zolen/AppData/Local/Programs/Microsoft%20VS%20Code/f6cfa2ea24/resources/app/out/vs/workbench/api/node/extensionHostProcess.js:530:145818)
["INFO" - 3:31:54 PM] Formatting completed in 100ms.
